# omnivore

./: .gitignore  Gemfile  README.md  omnivore.gemspec  pyproject.toml  pyrightconfig.json
config/: features.json
lib/: omnivore.rb
lib/omnivore/: document.rb  http_client.rb
migrations/: 001_initial_schema.sql
models/1/1/: feature_config.json  metadata.json  model.joblib
scripts/: backfill_historical.py  cli.py  seed_instruments.py
spec/: document_spec.rb  http_client_spec.rb
spec/fixtures/: thia-breen-interview
src/omnivore/: __init__.py  app.py  cli.py  config.py  conftest.py  db.py  feature.py
src/omnivore/api/: __init__.py  app.py  instruments.py  jobs.py  models.py  predictions.py
src/omnivore/api/routes/: jobs.py  (+2 more)
src/omnivore/instrument/: __init__.py  repository_test.py  service.py  service_test.py
src/omnivore/jobs/: __init__.py  tasks.py
src/omnivore/model/: __init__.py  drift_monitor.py  registry.py  registry_test.py  repository.py  repository_test.py
src/omnivore/ohlcv/: __init__.py  repository.py  repository_test.py  service.py  service_test.py
src/omnivore/prediction/: __init__.py  repository.py  repository_test.py  service.py  service_test.py
src/omnivore/repositories/: __init__.py  instrument_repository.py  instrument_repository_test.py  model_repository.py  ohlcv_repository.py  prediction_repository.py
src/omnivore/routes/: dashboard.py  models.py
src/omnivore/services/: __init__.py  data_service.py  drift_monitor.py  feature_engine.py  model_registry.py  prediction_service.py
src/omnivore/static/: script.js  style.css
(+2 files in other folders)
